bug: 36598
http://bugzilla.zimbra.com/show_bug.cgi?id=36598

Copied from Perforce
 Change: 153865